--- a/components/vis/css/vis.css
+++ b/components/vis/css/vis.css
@@ -407,7 +407,7 @@ opacity:0.5;
 }
 
 .vis.timeline .item.range .fuzzy-icon-start {
-  background: url('img/timeline/triangle-left.png') no-repeat top center;
+  background: url('../img/timeline/triangle-left.png') no-repeat top center;
   position: absolute;
   width: 12px;
   height: 12px;
@@ -418,7 +418,7 @@ opacity:0.5;
 }
 
 .vis.timeline .item.range .fuzzy-icon-end {
-  background: url('img/timeline/triangle-right.png') no-repeat top center;
+  background: url('../img/timeline/triangle-right.png') no-repeat top center;
   position: absolute;
   width: 12px;
   height: 12px;
@@ -548,7 +548,7 @@ z-index: 10;
 }
 
 .vis.timeline .item .delete {
-  background: url('img/timeline/delete.png') no-repeat top center;
+  background: url('../img/timeline/delete.png') no-repeat top center;
   position: absolute;
   width: 15px;
   height: 15px;
@@ -558,7 +558,7 @@ z-index: 10;
 }
 
 .vis.timeline .range-lock {
-  background: url('img/timeline/lock.png') no-repeat top center;
+  background: url('../img/timeline/lock.png') no-repeat top center;
   position: absolute;
   width: 15px;
   height: 15px;
@@ -568,7 +568,7 @@ z-index: 10;
 }
 
 .vis.timeline .range-unlock {
-  background: url('img/timeline/unlock.png') no-repeat top center;
+  background: url('../img/timeline/unlock.png') no-repeat top center;
   position: absolute;
   width: 15px;
   height: 15px;
@@ -1197,224 +1197,6 @@ transition:         height .4s ease-in-out, top .4s ease-in-out;
 }
 
 
-
-div.network-manipulationDiv {
-  border-width: 0;
-  border-bottom: 1px;
-  border-style:solid;
-  border-color: #d6d9d8;
-  background: #ffffff; /* Old browsers */
-  background: -moz-linear-gradient(top,  #ffffff 0%, #fcfcfc 48%, #fafafa 50%, #fcfcfc 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(48%,#fcfcfc), color-stop(50%,#fafafa), color-stop(100%,#fcfcfc)); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top,  #ffffff 0%,#fcfcfc 48%,#fafafa 50%,#fcfcfc 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top,  #ffffff 0%,#fcfcfc 48%,#fafafa 50%,#fcfcfc 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top,  #ffffff 0%,#fcfcfc 48%,#fafafa 50%,#fcfcfc 100%); /* IE10+ */
-  background: linear-gradient(to bottom,  #ffffff 0%,#fcfcfc 48%,#fafafa 50%,#fcfcfc 100%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#fcfcfc',GradientType=0 ); /* IE6-9 */
-
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 30px;
-}
-
-div.network-manipulation-editMode {
-  position:absolute;
-  left: 0;
-  top: 15px;
-  height: 30px;
-}
-
-div.network-manipulation-closeDiv {
-  position:absolute;
-  right: 0;
-  top: 0;
-  width: 30px;
-  height: 30px;
-
-  background-position: 20px 3px;
-  background-repeat: no-repeat;
-  background-image: url("img/network/cross.png");
-  cursor: pointer;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-div.network-manipulation-closeDiv:hover {
-  opacity: 0.6;
-}
-
-div.network-manipulationUI {
-  position:relative;
-  top:-7px;
-  font-family: verdana;
-  font-size: 12px;
-  -moz-border-radius: 15px;
-  border-radius: 15px;
-  display:inline-block;
-  background-position: 0px 0px;
-  background-repeat:no-repeat;
-  height:24px;
-  margin: 0px 0px 0px 10px;
-  vertical-align:middle;
-  cursor: pointer;
-  padding: 0px 8px 0px 8px;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-div.network-manipulationUI:hover {
-  box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.20);
-}
-
-div.network-manipulationUI:active {
-  box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.50);
-}
-
-div.network-manipulationUI.back {
-  background-image: url("img/network/backIcon.png");
-}
-
-div.network-manipulationUI.none:hover {
-  box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.0);
-  cursor: default;
-}
-div.network-manipulationUI.none:active {
-  box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.0);
-}
-div.network-manipulationUI.none {
-  padding: 0;
-}
-div.network-manipulationUI.notification{
-  margin: 2px;
-  font-weight: bold;
-}
-
-div.network-manipulationUI.add {
-  background-image: url("img/network/addNodeIcon.png");
-}
-
-div.network-manipulationUI.edit {
-  background-image: url("img/network/editIcon.png");
-}
-
-div.network-manipulationUI.edit.editmode {
-  background-color: #fcfcfc;
-  border-style:solid;
-  border-width:1px;
-  border-color: #cccccc;
-}
-
-div.network-manipulationUI.connect {
-  background-image: url("img/network/connectIcon.png");
-}
-
-div.network-manipulationUI.delete {
-  background-image: url("img/network/deleteIcon.png");
-}
-/* top right bottom left */
-div.network-manipulationLabel {
-  margin: 0px 0px 0px 23px;
-  line-height: 25px;
-}
-div.network-seperatorLine {
-  display:inline-block;
-  width:1px;
-  height:20px;
-  background-color: #bdbdbd;
-  margin: 5px 7px 0px 15px;
-}
-
-div.network-navigation_wrapper {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-}
-div.network-navigation {
-  width:34px;
-  height:34px;
-  -moz-border-radius: 17px;
-  border-radius: 17px;
-  position:absolute;
-  display:inline-block;
-  background-position: 2px 2px;
-  background-repeat:no-repeat;
-  cursor: pointer;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-div.network-navigation:hover {
-  box-shadow: 0px 0px 3px 3px rgba(56, 207, 21, 0.30);
-}
-
-div.network-navigation:active {
-  box-shadow: 0px 0px 1px 3px rgba(56, 207, 21, 0.95);
-}
-
-div.network-navigation.up {
-  background-image: url("img/network/upArrow.png");
-  bottom:50px;
-  left:55px;
-}
-div.network-navigation.down {
-  background-image: url("img/network/downArrow.png");
-  bottom:10px;
-  left:55px;
-}
-div.network-navigation.left {
-  background-image: url("img/network/leftArrow.png");
-  bottom:10px;
-  left:15px;
-}
-div.network-navigation.right {
-  background-image: url("img/network/rightArrow.png");
-  bottom:10px;
-  left:95px;
-}
-div.network-navigation.zoomIn {
-  background-image: url("img/network/plus.png");
-  bottom:10px;
-  right:15px;
-}
-div.network-navigation.zoomOut {
-  background-image: url("img/network/minus.png");
-  bottom:10px;
-  right:55px;
-}
-div.network-navigation.zoomExtends {
-  background-image: url("img/network/zoomExtends.png");
-  bottom:50px;
-  right:15px;
-}
-div.network-tooltip {
-  position: absolute;
-  visibility: hidden;
-  padding: 5px;
-  white-space: nowrap;
-
-  -moz-border-radius: 3px;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
-  border: 1px solid;
-
-  box-shadow: 3px 3px 10px rgba(128, 128, 128, 0.5);
-}
 
 .input-append{
   position: relative;
