--- a/components/vis/css/vis.css
+++ b/components/vis/css/vis.css
@@ -87,6 +87,7 @@
   position: relative;
   margin: 0;
   padding: 35px;
+  z-index: 0;
 }
 
 .vis.timeline .vispanel.left .content{
@@ -189,8 +190,8 @@ z-index: 1;
 .vis.timeline .item {
   position: absolute;
   color: #1A1A1A;
-  border-color: #97B0F8;
-  border-width: 1px;
+  border-color: transparent;
+  border-width: 0px;
   background-color: #D5DDF6;
   display: inline-block;
   padding: 5px;
@@ -231,17 +232,13 @@ z-index: 1;
 }
 
 .vis.timeline .item.range {
+  position: absolute;
   border-style: solid;
   border-radius: 2px;
   box-sizing: border-box;
-  z-index: 2;
   min-height: 30px;
   max-height: 70px;
   bottom: calc(50% - 15px);
-}
-
-.vis.timeline .item.range.grad {
-opacity:0.5;
 }
 
 
@@ -411,7 +408,7 @@ opacity:0.5;
   position: absolute;
   width: 12px;
   height: 12px;
-  left: -11px;
+  left: -10px;
   bottom: calc(50% - 6px);
   cursor: pointer;
   z-index: 5;
@@ -422,7 +419,7 @@ opacity:0.5;
   position: absolute;
   width: 12px;
   height: 12px;
-  right: -11px;
+  right: -10px;
   bottom: calc(50% - 6px);
   cursor: pointer;
   z-index: 5;
@@ -799,7 +796,7 @@ z-index: 10;
   position: absolute;
   border-style: solid;
   border-color: #bfbfbf;
-  z-index: 1;
+  z-index: -1;
 }
 
 .vis.timeline .item.interval .location-box {
@@ -990,6 +987,7 @@ transition:         height .4s ease-in-out, top .4s ease-in-out;
   width: 100%;
   height: 0;
   border-bottom: 1px solid;
+
 }
 
 .vis.timeline .vispanel.background.horizontal .grid.minor {
